AB#215207: fixing letter spacing issue with CTA buttons sitewide

--- a/docroot/themes/custom/emulsifymars/components/00-base/03-site/_base.scss
+++ b/docroot/themes/custom/emulsifymars/components/00-base/03-site/_base.scss
@@ -8,7 +8,7 @@ body {
   color: clr(text);
 
   /* ToDo: move functionality to separate font-family mixing to have possibility to add letter spacing per font from theme configurator.
-     And update all font-family declarations. 
+     And update all font-family declarations.
      Current data is for Dove Site only
   */
   letter-spacing: 0.048rem;
@@ -26,6 +26,22 @@ body {
   }
 
   @include body-copy;
+}
+/*
+  This block is a necessity to override the user agent letter spacing. The block above is not specific enough to handle buttons, only handles elements which do not have
+  letter spacing user agent rule.
+*/
+
+button {
+  letter-spacing: 0.048rem;
+
+  @include medium {
+    letter-spacing: 0.07rem;
+  }
+
+  @include large {
+    letter-spacing: 0.16rem;
+  }
 }
 
 *,
